# Palona_Labeling_Tool

./: .gitattributes  .gitignore  README.md  cloudflare-env.d.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: DepthEvidencePanel.tsx
app/lib/: control-alignment.ts  depth-features.ts  labeling-project.ts
depth_pipeline/: pyproject.toml
depth_pipeline/src/palona_depth/: __init__.py  __main__.py  cli.py  control.py  control_merge.py  features.py  full_video.py  full_video_cli.py  models.py  pipeline.py  roi_cli.py  roi_export.py  runtime_client.py  safety.py  video.py  video_convert.py  video_convert_cli.py
depth_pipeline/tests/: test_control.py  test_control_merge.py  test_features.py  test_full_video.py  test_pipeline.py  test_project_contract.py  test_roi_export.py  test_video_convert.py
docs/: DEPLOYMENT_HUANGHAI.zh-CN.md  annotation-project.schema.json  depth-features.schema.json
examples/: synthetic-project.json
scripts/: control-merge.sh  depth-preprocess.sh  depth-test.sh  full-video-preprocess.sh  roi-export.sh  video-convert.sh
tests/: control-alignment.test.mjs  labeling-project.test.mjs  rendered-html.test.mjs
vision_pipeline/: README.md
vision_pipeline/configs/: README.md
vision_pipeline/scripts/: run_use_case.py  sample_frames.py  validate_config.py  vp_cli.py
vision_pipeline/tests/: test_bot_sort_tracker.py  test_build_interaction_contours.py  test_config_validation.py  test_draw_video_contours.py  test_events_to_interaction_config.py  test_post_train.py  (+11 more)
(+77 files in other folders)
